--- a/website.css
+++ b/website.css
@@ -1,3 +1,34 @@
 .left-img{
   float:left;
 }
+
+.half{
+  float:left;
+  width: 50%;
+  padding: 0 8px
+}
+
+.card{
+  box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  overflow: scroll;
+  max-height:560px;
+  min-height:560px;
+}
+
+.container{
+  padding:0.01em 16px
+}
+
+.row-padding{
+  padding: 0 8px
+}
+
+.center{
+  text-align: center !important;
+  display: inline-block;
+  width: auto
+}
+
+.margin-top{
+  margin-top:16px !important
+}
